Issue #22156: Fix "comparison between signed and unsigned integers" compiler warnings in the Objects/ subdirectory.

PyType_FromSpecWithBases() and PyType_FromSpec() now reject explicitly negative
slot identifiers.