Objects/setobject.c
@@ -771,7 +771,7 @@ frozenset_hash(PyObject *self)
     /* Make the final result spread-out in a different pattern
        than the algorithm for tuples or other python objects. */
     hash = hash * 69069U + 907133923UL;
-    if (hash == -1)
+    if (hash == (Py_uhash_t)-1)
         hash = 590923713UL;
     so->hash = hash;
     return hash;
